Batch HAPI timeline downloads by dataset
Group catalog parameters by dataset, coalesce matching downloads, and decode selected components from shared responses. Preserve parameter subsets for predefined plots and avoid rebinning bar-only data.